<resources>
    <string name="app_name">UltrasonicBeam</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ins_freq">Insert the frequency</string>
    <string name="ins_mex">Insert the message</string>
    <string name="ric_mex">Message received</string>
    <string name="rec">RECEIVE</string>
    <string name="send">SEND</string>
    <string name="stop">STOP</string>
    <string name="stopping">STOPPING…</string>
    <string name="sending">SENDING…</string>
    <string name="sync">SYNCHRONIZE</string>
    <string name="syncing">SYNCING</string>

</resources>
