<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync"
        android:id="@+id/syncButtonS"
        android:layout_below="@+id/selectFrequencyS"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="6"
        android:id="@+id/selectFrequencyS"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        android:focusable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ins_freq"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/selectFrequencyS"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ins_mex"
        android:id="@+id/textView3"
        android:layout_below="@+id/syncButtonS"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendMessage"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:ems="13" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/sendButton"
        android:layout_below="@+id/sendMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:clickable="false" />

</RelativeLayout>